vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Check if the current program is scrambled<br>
     * \param p_mi the media player<br>
     * \return true if the current program is scrambled<br>
     * \libvlc_return_bool<br>
     * \version LibVLC 2.2.0 or later<br>
     * Original signature : <code>int libvlc_media_player_program_scrambled(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2348</i>
     */
    public static native int libvlc_media_player_program_scrambled(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Display the next frame (if supported)<br>
     * \param p_mi the media player<br>
     * Original signature : <code>void libvlc_media_player_next_frame(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2355</i>
     */
    public static native void libvlc_media_player_next_frame(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Navigate through DVD Menu<br>
     * \param p_mi the Media Player<br>
     * \param navigate the Navigation mode<br>
     * \version libVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_media_player_navigate(libvlc_media_player_t*, unsigned)</code><br>
     * <i>native declaration : line 2364</i>
     */
    public static native void libvlc_media_player_navigate(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int navigate);
    /**
     * Set if, and how, the video title will be shown when media is played.<br>
     * \param p_mi the media player<br>
     * \param position position at which to display the title, or libvlc_position_disable to prevent the title from being displayed<br>
     * \param timeout title display timeout in milliseconds (ignored if libvlc_position_disable)<br>
     * \version libVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_media_player_set_video_title_display(libvlc_media_player_t*, libvlc_position_t, unsigned int)</code><br>
     * <i>native declaration : line 2375</i>
     */
    public static native void libvlc_media_player_set_video_title_display(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, IntValuedEnum<LibvlcLibrary.libvlc_position_t > position, int timeout);
    /**
     * Release (free) libvlc_track_description_t<br>
     * \param p_track_description the structure to release<br>
     * Original signature : <code>void libvlc_track_description_list_release(libvlc_track_description_t*)</code><br>
     * <i>native declaration : line 2382</i>
     */
    public static native void libvlc_track_description_list_release(Pointer<libvlc_track_description_t > p_track_description);
    /**
     * \deprecated Use libvlc_track_description_list_release instead<br>
     * Original signature : <code>void libvlc_track_description_release(libvlc_track_description_t*)</code><br>
     * <i>native declaration : line 2388</i>
     */
    public static native void libvlc_track_description_release(Pointer<libvlc_track_description_t > p_track_description);
    /**
     * Toggle fullscreen status on non-embedded video outputs.<br>
     * @warning The same limitations applies to this function<br>
     * as to libvlc_set_fullscreen().<br>
     * \param p_mi the media player<br>
     * Original signature : <code>void libvlc_toggle_fullscreen(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2402</i>
     */
    public static native void libvlc_toggle_fullscreen(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Enable or disable fullscreen.<br>
     * @warning With most window managers, only a top-level windows can be in<br>
     * full-screen mode. Hence, this function will not operate properly if<br>
     * libvlc_media_player_set_xwindow() was used to embed the video in a<br>
     * non-top-level window. In that case, the embedding window must be reparented<br>
     * to the root window <b>before</b> fullscreen mode is enabled. You will want<br>
     * to reparent it back to its normal parent when disabling fullscreen.<br>
     * \param p_mi the media player<br>
     * \param b_fullscreen boolean for fullscreen status<br>
     * Original signature : <code>void libvlc_set_fullscreen(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2417</i>
     */
    public static native void libvlc_set_fullscreen(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int b_fullscreen);
    /**
     * Get current fullscreen status.<br>
     * \param p_mi the media player<br>
     * \return the fullscreen status (boolean)<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_get_fullscreen(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2427</i>
     */
    public static native int libvlc_get_fullscreen(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Enable or disable key press events handling, according to the LibVLC hotkeys<br>
     * configuration. By default and for historical reasons, keyboard events are<br>
     * handled by the LibVLC video widget.<br>
     * \note On X11, there can be only one subscriber for key press and mouse<br>
     * click events per window. If your application has subscribed to those events<br>
     * for the X window ID of the video widget, then LibVLC will not be able to<br>
     * handle key presses and mouse clicks in any case.<br>
     * \warning This function is only implemented for X11 and Win32 at the moment.<br>
     * \param p_mi the media player<br>
     * \param on true to handle key press events, false to ignore them.<br>
     * Original signature : <code>void libvlc_video_set_key_input(libvlc_media_player_t*, unsigned)</code><br>
     * <i>native declaration : line 2445</i>
     */
    public static native void libvlc_video_set_key_input(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int on);
    /**
     * Enable or disable mouse click events handling. By default, those events are<br>
     * handled. This is needed for DVD menus to work, as well as a few video<br>
     * filters such as "puzzle".<br>
     * \see libvlc_video_set_key_input().<br>
     * \warning This function is only implemented for X11 and Win32 at the moment.<br>
     * \param p_mi the media player<br>
     * \param on true to handle mouse click events, false to ignore them.<br>
     * Original signature : <code>void libvlc_video_set_mouse_input(libvlc_media_player_t*, unsigned)</code><br>
     * <i>native declaration : line 2460</i>
     */
    public static native void libvlc_video_set_mouse_input(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int on);
    /**
     * Get the pixel dimensions of a video.<br>
     * \param p_mi media player<br>
     * \param num number of the video (starting from, and most commonly 0)<br>
     * \param px pointer to get the pixel width [OUT]<br>
     * \param py pointer to get the pixel height [OUT]<br>
     * \return 0 on success, -1 if the specified video does not exist<br>
     * Original signature : <code>int libvlc_video_get_size(libvlc_media_player_t*, unsigned, unsigned*, unsigned*)</code><br>
     * <i>native declaration : line 2472</i>
     */
    public static native int libvlc_video_get_size(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int num, Pointer<Integer > px, Pointer<Integer > py);
    /**
     * Get current video height.<br>
     * \deprecated Use libvlc_video_get_size() instead.<br>
     * \param p_mi the media player<br>
     * \return the video pixel height or 0 if not applicable<br>
     * Original signature : <code>int libvlc_video_get_height(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2483</i>
     */
    public static native int libvlc_video_get_height(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get current video width.<br>
     * \deprecated Use libvlc_video_get_size() instead.<br>
     * \param p_mi the media player<br>
     * \return the video pixel width or 0 if not applicable<br>
     * Original signature : <code>int libvlc_video_get_width(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2493</i>
     */
    public static native int libvlc_video_get_width(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the mouse pointer coordinates over a video.<br>
     * Coordinates are expressed in terms of the decoded video resolution,<br>
     * <b>not</b> in terms of pixels on the screen/viewport (to get the latter,<br>
     * you can query your windowing system directly).<br>
     * Either of the coordinates may be negative or larger than the corresponding<br>
     * dimension of the video, if the cursor is outside the rendering area.<br>
     * @warning The coordinates may be out-of-date if the pointer is not located<br>
     * on the video rendering area. LibVLC does not track the pointer if it is<br>
     * outside of the video widget.<br>
     * @note LibVLC does not support multiple pointers (it does of course support<br>
     * multiple input devices sharing the same pointer) at the moment.<br>
     * \param p_mi media player<br>
     * \param num number of the video (starting from, and most commonly 0)<br>
     * \param px pointer to get the abscissa [OUT]<br>
     * \param py pointer to get the ordinate [OUT]<br>
     * \return 0 on success, -1 if the specified video does not exist<br>
     * Original signature : <code>int libvlc_video_get_cursor(libvlc_media_player_t*, unsigned, int*, int*)</code><br>
     * <i>native declaration : line 2518</i>
     */
    public static native int libvlc_video_get_cursor(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int num, Pointer<Integer > px, Pointer<Integer > py);
    /**
     * Get the current video scaling factor.<br>
     * See also libvlc_video_set_scale().<br>
     * \param p_mi the media player<br>
     * \return the currently configured zoom factor, or 0. if the video is set<br>
     * to fit to the output window/drawable automatically.<br>
     * Original signature : <code>float libvlc_video_get_scale(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2529</i>
     */
    public static native float libvlc_video_get_scale(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set the video scaling factor. That is the ratio of the number of pixels on<br>
     * screen to the number of pixels in the original decoded video in each<br>
     * dimension. Zero is a special value; it will adjust the video to the output<br>
     * window/drawable (in windowed mode) or the entire screen.<br>
     * Note that not all video outputs support scaling.<br>
     * \param p_mi the media player<br>
     * \param f_factor the scaling factor, or zero<br>
     * Original signature : <code>void libvlc_video_set_scale(libvlc_media_player_t*, float)</code><br>
     * <i>native declaration : line 2542</i>
     */
    public static native void libvlc_video_set_scale(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, float f_factor);
    /**
     * Get current video aspect ratio.<br>
     * \param p_mi the media player<br>
     * \return the video aspect ratio or NULL if unspecified<br>
     * (the result must be released with free() or libvlc_free()).<br>
     * Original signature : <code>char* libvlc_video_get_aspect_ratio(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2551</i>
     */
    public static native Pointer<Byte > libvlc_video_get_aspect_ratio(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set new video aspect ratio.<br>
     * \param p_mi the media player<br>
     * \param psz_aspect new video aspect-ratio or NULL to reset to default<br>
     * \note Invalid aspect ratios are ignored.<br>
     * Original signature : <code>void libvlc_video_set_aspect_ratio(libvlc_media_player_t*, const char*)</code><br>
     * <i>native declaration : line 2560</i>
     */
    public static native void libvlc_video_set_aspect_ratio(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, Pointer<Byte > psz_aspect);
